refactor: 清理废弃接口并优化测试配置
- 移除 chatByTaskType 接口及相关实现
- 优化 TestBeanConfig Mock 配置，使用简洁的 Mockito 语法
- 添加 maven-surefire-plugin 配置，排除集成测试
- 为核心类添加 @author xiexu 注释
- 统一代码格式和导入语句