@@ -1,6 +1,7 @@
 package com.xbk.knowledge.test;
 
 import java.util.List;
+import java.util.Collections;
 
 import org.mockito.Mockito;
 import org.springframework.ai.chat.messages.AssistantMessage;
@@ -9,18 +10,27 @@ import org.springframework.ai.chat.model.Generation;
 import org.springframework.ai.chat.prompt.Prompt;
 import org.springframework.ai.document.Document;
 import org.springframework.ai.model.tool.ToolCallingManager;
+import org.springframework.ai.ollama.OllamaChatModel;
 import org.springframework.ai.openai.OpenAiChatModel;
 import org.springframework.ai.openai.api.OpenAiApi;
+import org.springframework.ai.tool.ToolCallback;
 import org.springframework.ai.tool.ToolCallbackProvider;
 import org.springframework.ai.transformer.splitter.TokenTextSplitter;
 import org.springframework.ai.vectorstore.SearchRequest;
 import org.springframework.ai.vectorstore.SimpleVectorStore;
 import org.springframework.ai.vectorstore.pgvector.PgVectorStore;
+import org.springframework.ai.chat.client.ChatClient;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.context.annotation.Primary;
 import org.springframework.context.annotation.Profile;
 import reactor.core.publisher.Flux;
+
+import com.xbk.knowledge.application.provider.ModelProvider;
+import com.xbk.knowledge.application.provider.ModelProviderFactory;
+import com.xbk.knowledge.domain.model.entity.ModelConfig;
+import com.xbk.knowledge.trigger.job.MCPServerCSDNJob;
+import com.xbk.knowledge.types.enums.ModelType;
 
 /**
  * 测试环境的 Bean 替身
@@ -43,18 +53,11 @@ public class TestBeanConfig {
         OpenAiChatModel mock = Mockito.mock(OpenAiChatModel.class);
         AssistantMessage assistantMessage = new AssistantMessage("mock-response");
         Generation generation = new Generation(assistantMessage);
-        List<Generation> generations = List.of(generation);
+        List<Generation> generations = Collections.singletonList(generation);
         ChatResponse response = new ChatResponse(generations);
-        Prompt anyPrompt = Mockito.any(Prompt.class);
-        Mockito
-                .doReturn(response)
-                .when(mock)
-                .call(anyPrompt);
         Flux<ChatResponse> responseFlux = Flux.just(response);
-        Mockito
-                .doReturn(responseFlux)
-                .when(mock)
-                .stream(anyPrompt);
+        Mockito.when(mock.call(Mockito.any(Prompt.class))).thenReturn(response);
+        Mockito.when(mock.stream(Mockito.any(Prompt.class))).thenReturn(responseFlux);
         return mock;
     }
 
@@ -78,12 +81,8 @@ public class TestBeanConfig {
     @Primary
     public SimpleVectorStore openAiSimpleVectorStore() {
         SimpleVectorStore mock = Mockito.mock(SimpleVectorStore.class);
-        SearchRequest anySearchRequest = Mockito.any(SearchRequest.class);
-        List<Document> emptyDocuments = List.of();
-        Mockito
-                .doReturn(emptyDocuments)
-                .when(mock)
-                .similaritySearch(anySearchRequest);
+        List<Document> emptyDocuments = Collections.emptyList();
+        Mockito.when(mock.similaritySearch(Mockito.any(SearchRequest.class))).thenReturn(emptyDocuments);
         return mock;
     }
 
@@ -96,12 +95,8 @@ public class TestBeanConfig {
     @Primary
     public PgVectorStore openAiPgVectorStore() {
         PgVectorStore mock = Mockito.mock(PgVectorStore.class);
-        SearchRequest anySearchRequest = Mockito.any(SearchRequest.class);
-        List<Document> emptyDocuments = List.of();
-        Mockito
-                .doReturn(emptyDocuments)
-                .when(mock)
-                .similaritySearch(anySearchRequest);
+        List<Document> emptyDocuments = Collections.emptyList();
+        Mockito.when(mock.similaritySearch(Mockito.any(SearchRequest.class))).thenReturn(emptyDocuments);
         return mock;
     }
 
@@ -117,22 +112,67 @@ public class TestBeanConfig {
     }
 
     /**
+     * Mock Ollama ChatModel
+     *
+     * @return OllamaChatModel
+     */
+    @Bean
+    @Primary
+    public OllamaChatModel ollamaChatModel() {
+        OllamaChatModel mock = Mockito.mock(OllamaChatModel.class);
+        AssistantMessage assistantMessage = new AssistantMessage("mock-response");
+        Generation generation = new Generation(assistantMessage);
+        List<Generation> generations = Collections.singletonList(generation);
+        ChatResponse response = new ChatResponse(generations);
+        Flux<ChatResponse> responseFlux = Flux.just(response);
+        Mockito.when(mock.call(Mockito.any(Prompt.class))).thenReturn(response);
+        Mockito.when(mock.stream(Mockito.any(Prompt.class))).thenReturn(responseFlux);
+        return mock;
+    }
+
+    /**
+     * Mock Ollama 简单向量存储
+     *
+     * @return SimpleVectorStore
+     */
+    @Bean(name = "ollamaSimpleVectorStore")
+    @Primary
+    public SimpleVectorStore ollamaSimpleVectorStore() {
+        SimpleVectorStore mock = Mockito.mock(SimpleVectorStore.class);
+        List<Document> emptyDocuments = Collections.emptyList();
+        Mockito.when(mock.similaritySearch(Mockito.any(SearchRequest.class))).thenReturn(emptyDocuments);
+        return mock;
+    }
+
+    /**
+     * Mock Ollama PgVector 向量存储
+     *
+     * @return PgVectorStore
+     */
+    @Bean(name = "ollamaPgVectorStore")
+    @Primary
+    public PgVectorStore ollamaPgVectorStore() {
+        PgVectorStore mock = Mockito.mock(PgVectorStore.class);
+        List<Document> emptyDocuments = Collections.emptyList();
+        Mockito.when(mock.similaritySearch(Mockito.any(SearchRequest.class))).thenReturn(emptyDocuments);
+        return mock;
+    }
+
+    /**
      * Mock ToolCallbackProvider
      * 用于测试环境，避免 MCPServerCSDNJob 依赖注入失败
      *
-     * 注意：已移除此 Mock Bean，改为使用真实的 MCP ToolCallbackProvider
-     * 这样可以在测试中正常使用 MCP 工具
-     *
      * @return ToolCallbackProvider
      */
-    // @Bean
-    // @Primary
-    // public ToolCallbackProvider toolCallbackProvider() {
-    //     var mock = Mockito.mock(ToolCallbackProvider.class);
-    //     // 配置 mock 返回空数组，避免 NullPointerException
-    //     Mockito.when(mock.getToolCallbacks()).thenReturn(new org.springframework.ai.tool.ToolCallback[0]);
-    //     return mock;
-    // }
+    @Bean
+    @Primary
+    public ToolCallbackProvider toolCallbackProvider() {
+        ToolCallbackProvider mock = Mockito.mock(ToolCallbackProvider.class);
+        ToolCallback toolCallback = Mockito.mock(ToolCallback.class);
+        ToolCallback[] callbacks = new ToolCallback[]{toolCallback};
+        Mockito.when(mock.getToolCallbacks()).thenReturn(callbacks);
+        return mock;
+    }
 
     /**
      * Mock ToolCallingManager
@@ -144,5 +184,40 @@ public class TestBeanConfig {
     @Primary
     public ToolCallingManager toolCallingManager() {
         return Mockito.mock(ToolCallingManager.class);
+    }
+
+    /**
+     * Mock ModelProviderFactory
+     * 避免测试中真实创建外部模型客户端
+     *
+     * @param openAiChatModel Mock OpenAI ChatModel
+     * @return ModelProviderFactory
+     */
+    @Bean
+    @Primary
+    public ModelProviderFactory modelProviderFactory(OpenAiChatModel openAiChatModel) {
+        ModelProviderFactory mock = Mockito.mock(ModelProviderFactory.class);
+        ChatClient chatClient = ChatClient.builder(openAiChatModel).build();
+        Mockito.when(mock.createChatClient(Mockito.any(ModelConfig.class))).thenReturn(chatClient);
+        Mockito.when(mock.isSupported(Mockito.any(ModelType.class))).thenReturn(true);
+
+        ModelProvider provider = Mockito.mock(ModelProvider.class);
+        Mockito.when(provider.createChatClient(Mockito.any(ModelConfig.class))).thenReturn(chatClient);
+        Mockito.when(provider.getModelType()).thenReturn(ModelType.OPENAI);
+        Mockito.when(provider.isHealthy(Mockito.any(ModelConfig.class))).thenReturn(true);
+        Mockito.when(mock.getProvider(Mockito.any(ModelType.class))).thenReturn(provider);
+        return mock;
+    }
+
+    /**
+     * Mock MCPServerCSDNJob
+     * 避免测试触发真实外部调用
+     *
+     * @return MCPServerCSDNJob
+     */
+    @Bean
+    @Primary
+    public MCPServerCSDNJob mcpServerCSDNJob() {
+        return Mockito.mock(MCPServerCSDNJob.class);
     }
 }
